--- a/src/global.css
+++ b/src/global.css
@@ -10,7 +10,7 @@
 @source "../node_modules/@luminescent/ui-qwik";
 
 @theme {
-  --lum-default-alpha: 70;
+  --lum-default-alpha: 40;
   --lum-border-radius: 0.5rem;
   --color-green: var(--color-green-900);
   --color-red: var(--color-red-900);
@@ -24,14 +24,14 @@
   --color-lime: var(--color-lime-900);
   --color-teal: var(--color-teal-900);
   --color-lum-border: #dfdfdfaa;
-  --color-nav-bg: --alpha(var(--color-sky-950) / 70%);
+  --color-nav-bg: --alpha(var(--color-sky-950) / 40%);
   --color-bg: var(--color-gray-950);
 }
 
 @media (prefers-color-scheme: light) {
   :root {
     --color-bg: var(--color-gray-200);
-    --color-nav-bg: --alpha(var(--color-blue-300) / 95%);
+    --color-nav-bg: --alpha(var(--color-blue-300) / 40%);
     --color-green: var(--color-green-500);
     --color-red: var(--color-red-500);
     --color-orange: var(--color-orange-500);
@@ -59,7 +59,7 @@ a.lum-btn, a.lum-card {
 
 html {
   font-family: Figtree, sans-serif;
-  background-color: var(--color-bg);
+  background-color: --alpha(var(--color-bg) / 50%);
 }
 
 * {
